tests/NormalTests/paczka2/big_fuzzy/91071059.err
Error in line 1: cHL S266 17,7
Error in line 2: cHL S161 99,1
Error in line 8: uqlFrI9 A688 8,4
Error in line 9: uqlFrI9 A302 18,2
Error in line 14: cHL S161 83,4
Error in line 30: ELfzH4V1nW1 A688 85,6
Error in line 28: cHL S266 65,4
Error in line 38: cHL S161 57,8
Error in line 27: ZQhFbTXkUJ A302 6,9
Error in line 45: uqlFrI9 A688 47,0
Error in line 50: cHL A302 16,2
Error in line 56: cHL S161 44,2
Error in line 59: cHL A302 73,0
Error in line 57: 0MGNE A302 0,2
Error in line 58: ZQhFbTXkUJ A688 36,1
Error in line 66: ZQhFbTXkUJ A302 63,6
Error in line 67: ZQhFbTXkUJ A688 32,4
Error in line 72: ZQhFbTXkUJ A302 97,0
Error in line 76: cHL S161 60,0
Error in line 95: 0MGNE S266 73,4
Error in line 118: ELfzH4V1nW1 S161 22,91
Error in line 125: ZQhFbTXkUJ A688 93,4
Error in line 122: ELfzH4V1nW1 S161 84,0
Error in line 130: uqlFrI9 A302 29,2
Error in line 131: uqlFrI9 S266 91,8
Error in line 127: cHL S161 49,1
Error in line 141: uqlFrI9 S266 -4,4
Error in line 140: ZQhFbTXkUJ S161 78,1
Error in line 143: ZQhFbTXkUJ A302 45,1
Error in line 146: ZQhFbTXkUJ S161 66,0
Error in line 124: GdazUBv3 A302 70,5
Error in line 152: GdazUBv3 S161 95,8
Error in line 154: cHL S266 46,7
Error in line 138: uqlFrI9 S266 71,3
Error in line 167: cHL A302 89,1
Error in line 149: 0MGNE S161 3,8
Error in line 170: 0MGNE S266 68,8
Error in line 157: GdazUBv3 S266 50,0
Error in line 172: 0MGNE A688 16,9
Error in line 174: GdazUBv3 S161 23,0
Error in line 165: S266 A688 78,1
Error in line 182: ZQhFbTXkUJ S266 82,5
Error in line 195: GdazUBv3 S266 2,6
Error in line 196: uqlFrI9 S161 42,5
Error in line 197: ZQhFbTXkUJ A302 97,7
Error in line 203: 0MGNE A302 29,9
Error in line 209: uqlFrI9 A302 277,4
Error in line 211: cHL A302 67,6
Error in line 224: 0MGNE A302 23,2
Error in line 234: GdazUBv3 S161 21,2
Error in line 231: 0MGNE S266 73,5
Error in line 240: S266 A302 54,7
Error in line 245: cHL A302 92,5
Error in line 246: GdazUBv3 S161 53,8
